syntax = "proto3";

package textgeneration;

service TextGenerationService {
  // Generate a single sentence based on a query
  rpc GenerateSentence (GenerateRequest) returns (GenerateResponse);
}

// Request message for generating a sentence
message GenerateRequest {
  string query = 1; // The input query
  int32 max_length = 2; // Maximum length of the generated sentence
}

// Response message for generating a sentence
message GenerateResponse {
  repeated string sentences = 1; // Generated sentences
}